--- a/index.html
+++ b/index.html
@@ -2,24 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="CSS/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
-
     <title>Portafolio | Jesús González</title>
   </head>
   <body>
     <header>
       <img src="img/computadora-portatil.png" alt="Logo computadora-portatil" />
-      <nav>
+      <i class="bi bi-list menu-toggle"></i>
+
+      <nav class="sidebar-nav">
         <a href="#Home" class="nav-link">Inicio</a>
         <a href="#About" class="nav-link">Sobre mí</a>
         <a href="#Experiencia" class="nav-link">Experiencia</a>
@@ -142,7 +152,7 @@
           <h2>Contacto</h2>
           <div class="Contacto-texto">
             <p>
-              Correo electrónico: Villadiegoj99@gmail.com <br>
+              Correo electrónico: Villadiegoj99@gmail.com <br />
               Teléfono: (+57) 3045277930
             </p>
           </div>
