--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="Boton-descargar">
             <a
-              href="PDF/Hoja de vida Jesus Gonzalez Villadiego.pdf"
+              href="PDF/Hoja de vida jesus gonzalez villadiego.pdf"
               target="_blank"
               class="btn-descargar btn-cv"
               >Descargar CV</a
